# minute

./: .gitignore  pyproject.toml
backend/api/dependencies/: get_current_user.py
common/: auth.py  settings.py
common/audio/: generate_speaker_predictions.py  speakers.py
common/database/: postgres_models.py
common/services/queue_services/: __init__.py
common/services/storage_services/: azure_blob.py
common/templates/default/: child_in_need.py
frontend/: middleware.ts  next.config.js
frontend/app/api/auth/callback/: route.ts
frontend/app/api/auth/login/: route.ts
frontend/lib/auth/: index.ts
tests/: test_speakers.py
worker/: entrypoint.sh
